@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketMove.pm - move tickets to queues
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketMove.pm,v 1.78.2.6 2011/10/12 16:01:17 sb Exp $
+# $Id: AgentTicketMove.pm,v 1.78.2.7 2011/12/09 12:49:45 des Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -18,7 +18,7 @@ use Kernel::System::State;
 use Kernel::System::Web::UploadCache;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.78.2.6 $) [1];
+$VERSION = qw($Revision: 1.78.2.7 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -864,14 +864,11 @@ sub AgentMove {
     my %UsedData;
     my %UserHash;
     if ( $Param{OldUser} ) {
-        my $Counter = 0;
+        my $Counter = 1;
         for my $User ( reverse @{ $Param{OldUser} } ) {
-            if ($Counter) {
-                if ( !$UserHash{ $User->{UserID} } ) {
-                    $UserHash{ $User->{UserID} } = "$Counter: $User->{UserLastname} "
-                        . "$User->{UserFirstname} ($User->{UserLogin})";
-                }
-            }
+            next if $UserHash{ $User->{UserID} };
+            $UserHash{ $User->{UserID} } = "$Counter: $User->{UserLastname} "
+                . "$User->{UserFirstname} ($User->{UserLogin})";
             $Counter++;
         }
     }
